--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.0.17",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@prismicio/helpers": "^2.3.9",
     "flowbite": "^1.6.5"
   }
