--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/prismic": "3.0.0-rc.5",
     "@nuxtjs/tailwindcss": "^6.6.7",
     "@slicemachine/adapter-nuxt": "^0.1.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.4.3",
