feat: added slices and new data types to refactor cms

--- a/slicemachine.config.json
+++ b/slicemachine.config.json
@@ -1,5 +1,6 @@
 {
   "repositoryName": "rdnz-dev",
   "adapter": "@slicemachine/adapter-nuxt",
-  "libraries": ["./slices"]
+  "libraries": ["./slices"],
+  "localSliceSimulatorURL": "http://localhost:3000/slice-simulator"
 }
