--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@heroicons/vue": "^2.0.18",
     "@prismicio/helpers": "^2.3.9",
     "flowbite": "^1.6.5"
   }
