chore: added eslint with some rules and fixes

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "slicemachine": "start-slicemachine"
+    "slicemachine": "start-slicemachine",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@nuxt/image-edge": "1.0.0-28059208.2abef1b",
@@ -17,7 +18,11 @@
     "@slicemachine/adapter-nuxt": "^0.1.2",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.42.0",
+    "eslint-plugin-vue": "^9.14.1",
     "nuxt": "^3.4.3",
     "postcss": "^8.4.23",
     "sass": "^1.62.1",
