--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@nuxt/image-edge": "1.0.0-28059208.2abef1b",
     "@nuxtjs/color-mode": "^3.2.0",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/prismic": "3.0.0-rc.5",
     "@nuxtjs/tailwindcss": "^6.6.7",
     "@slicemachine/adapter-nuxt": "^0.1.2",
