--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@nuxt/image-edge": "1.0.0-28059208.2abef1b",
+    "@nuxt/image-edge": "1.0.0-rc.1-28126030.07836ae",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/prismic": "3.0.0-rc.5",
+    "@nuxtjs/prismic": "3.0.1",
     "@nuxtjs/tailwindcss": "^6.6.7",
-    "@slicemachine/adapter-nuxt": "^0.1.2",
+    "@slicemachine/adapter-nuxt": "^0.3.1",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^18",
+    "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.42.0",
     "eslint-plugin-vue": "^9.14.1",
-    "nuxt": "^3.4.3",
+    "nuxt": "^3.6.0",
     "postcss": "^8.4.23",
     "sass": "^1.62.1",
-    "sass-loader": "10",
+    "sass-loader": "^13.3.2",
     "slice-machine-ui": "^1.0.3",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2"
